# timm_eval

./: LICENSE.md  README.md  pyproject.toml
timm_eval/: __main__.py  evaluator.py  evaluator_utils.py  utils.py
timm_eval/api/: instance.py  metrics.py  model.py  registry.py  task.py
timm_eval/caching/: cache.py
timm_eval/loggers/: evaluation_tracker.py  utils.py  wandb_logger.py
timm_eval/models/: __init__.py  timm.py
timm_eval/tasks/: __init__.py
timm_eval/tasks/imagenet1k/: imagenet1k.yaml  utils.py
